# app/Http/Controllers/ImageController.php
@@ -12,10 +12,50 @@ use Symfony\Component\HttpFoundation\JsonResponse;
 
 class ImageController extends Controller
 {
-    public function index()
-    {
-    }
-
+    /**
+     * Store
+     * @OA\Post (
+     *     path="/api/image",
+     *     tags={"Image"},
+     *     security={{"bearer_token": {}}},
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                      required={"file"},
+     *                      @OA\Property(
+     *                          property="file",
+     *                          type="file",
+     *                      ),
+     *              )
+     *         )
+     *      ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="data", type="object",
+     *                  ref="#/components/schemas/ImageSchema"
+     *              ),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Validation error",
+     *          @OA\JsonContent(
+     *                  @OA\Property(property="message", type="string", example="The file field is required."),
+     *                  @OA\Property(property="errors", type="object",
+     *                      @OA\Property(property="The", type="array", collectionFormat="multi",
+     *                        @OA\Items(
+     *                          type="string",
+     *                          example="The The field is required.",
+     *                          )
+     *                      ),
+     *                 ),
+     *          )
+     *      )
+     * )
+     */
     public function store(StoreImageRequest $request): JsonResponse
     {
         $image = $request->file('image');
@@ -41,7 +81,38 @@ class ImageController extends Controller
     }
 
     /**
-     * Display the specified resource.
+     * Show
+     * @OA\get (
+     *     path="/api/image/{id}",
+     *     tags={"Image"},
+     *     @OA\Parameter( 
+     *          name="id",
+     *          description="Id",
+     *          in="path",
+     *          required=true,
+     *          example="1",
+     *          @OA\Schema(
+     *              type="number"
+     *          ),
+     *     ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="data", type="object",
+     *                  ref="#/components/schemas/ImageSchema"
+     *              ),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Validation error",
+     *          @OA\JsonContent(
+     *                  @OA\Property(property="message", type="string", example="Not found"),
+     *                  ),
+     *          )
+     *      )
+     * )
      */
     public function show(ShowImageRequest $request, int $id)
     {
@@ -57,7 +128,36 @@ class ImageController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
+     * Delete
+     * @OA\Delete (
+     *     path="/api/image/{id}",
+     *     tags={"Image"},
+     *     security={{"bearer_token": {}}},
+     *     @OA\Parameter(
+     *          name="id",
+     *          description="Image id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="Deleted"),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Access error",
+     *          @OA\JsonContent(
+     *                  @OA\Property(property="message", type="string", example="No access"),
+     *                 ),
+     *          )
+     *      )
+     * )
      */
     public function destroy(int $id)
     {
